<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.MiPerfil">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/header_footer">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/imagelogo" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mi Perfil"
        android:textColor="@color/azul_general"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/til_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintVertical_bias="0.18">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_nombre"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_registro"
        app:layout_constraintTop_toBottomOf="@id/tv_registro"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipo_documento"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:layout_constraintBottom_toTopOf="@id/til_documento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_nombre"
        android:hint="@string/txt_tipoDocumento"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/tie_tipdoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_documento"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_documento"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:startIconContentDescription="Nombre completo"
        app:layout_constraintTop_toBottomOf="@id/tipo_documento"
        app:layout_constraintBottom_toTopOf="@id/til_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_correo"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_correo"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_documento"
        app:layout_constraintBottom_toTopOf="@id/til_password"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textWebEmailAddress"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_password"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_correo"
        android:layout_marginTop="10dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_direccion"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_direccion"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ciudad"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_ciudad"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_direccion"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_telefono"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:hint="@string/txt_telefono"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_ciudad"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/header_footer"
        />
    <Button
        android:id="@+id/b_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:backgroundTint="@color/btn_naranja"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/footer"
        app:layout_constraintEnd_toEndOf="@id/footer"
        app:layout_constraintStart_toStartOf="@id/footer"
        app:layout_constraintTop_toTopOf="@id/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>