<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/header_footer"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/imagelogo" />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bienvenido"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="36dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

    </TextView>

    <TextView
        android:id="@+id/txt_personalEficiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_personalLimpieza"
        android:textColor="@color/azul_general"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_bienvenido"
        app:layout_constraintVertical_bias="0.13999999">

    </TextView>

    <TextView
        android:id="@+id/txt_eficiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_eficiente"
        android:textColor="@color/azul_general"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_personalEficiente"
        app:layout_constraintVertical_bias="0.19999999">

    </TextView>

    <ImageView
        android:id="@+id/iv_fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/limpieza" />


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/header_footer"
        />

</androidx.constraintlayout.widget.ConstraintLayout>