<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_login">


    <TextView
        android:id="@+id/tv_iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:textColor="@color/azul_general"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        >

    </TextView>

    <ImageView
        android:id="@+id/iv_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_iniciarSesion"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/person" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Correo"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_iniciarSesion"
        android:layout_marginBottom="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_contraseña"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/iconoregistro"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_correo"
        android:layout_marginBottom="210dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_olvidocontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Olvido su contraseña?"
        android:textColor="@color/azul_general"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/tv_registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_registrate"
        android:textColor="@color/azul_general"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"
        />


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/header_footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/b_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_ingresar"
        android:backgroundTint="@color/btn_naranja"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/footer"
        app:layout_constraintEnd_toEndOf="@id/footer"
        app:layout_constraintStart_toStartOf="@id/footer"
        app:layout_constraintTop_toTopOf="@id/footer" />


</androidx.constraintlayout.widget.ConstraintLayout>